SERVER-24914 SERVER-24915 improve getting cwd at server startup