src/mongo/db/mongod_options_init.cpp
@@ -69,7 +69,7 @@ MONGO_INITIALIZER_GENERAL(MongodOptions_Store,
                           ("BeginStartupOptionStorage"),
                           ("EndStartupOptionStorage"))
 (InitializerContext* context) {
-    Status ret = storeMongodOptions(moe::startupOptionsParsed, context->args());
+    Status ret = storeMongodOptions(moe::startupOptionsParsed);
     if (!ret.isOK()) {
         std::cerr << ret.toString() << std::endl;
         std::cerr << "try '" << context->args()[0] << " --help' for more information" << std::endl;
