src/mongo/db/server_options_test.cpp
@@ -25,16 +25,32 @@
  *    then also delete it in the license file.
  */
 
+#define MONGO_LOG_DEFAULT_COMPONENT ::mongo::logger::LogComponent::kDefault
+
 #include "mongo/platform/basic.h"
+
+#include "mongo/config.h"
+
+#if defined(MONGO_CONFIG_HAVE_HEADER_UNISTD_H)
+#include <unistd.h>
+#endif
+#ifndef _WIN32
+#include <sys/types.h>
+#include <sys/wait.h>
+#endif
+
+#include <boost/filesystem.hpp>
 
 #include "mongo/bson/util/builder.h"
 #include "mongo/db/server_options.h"
 #include "mongo/db/server_options_helpers.h"
 #include "mongo/logger/logger.h"
 #include "mongo/unittest/unittest.h"
+#include "mongo/util/log.h"
 #include "mongo/util/options_parser/environment.h"
 #include "mongo/util/options_parser/option_section.h"
 #include "mongo/util/options_parser/options_parser.h"
+#include "mongo/util/scopeguard.h"
 
 namespace {
 
@@ -84,7 +100,8 @@ TEST(Verbosity, Default) {
 
     ASSERT_OK(::mongo::validateServerOptions(environment));
     ASSERT_OK(::mongo::canonicalizeServerOptions(&environment));
-    ASSERT_OK(::mongo::storeServerOptions(environment, argv));
+    ASSERT_OK(::mongo::setupServerOptions(argv));
+    ASSERT_OK(::mongo::storeServerOptions(environment));
 
     // Make sure the log level didn't change since we didn't specify any verbose options
     ASSERT_EQUALS(::mongo::logger::globalLogDomain()->getMinimumLogSeverity(),
@@ -111,7 +128,8 @@ TEST(Verbosity, CommandLineImplicit) {
 
     ASSERT_OK(::mongo::validateServerOptions(environment));
     ASSERT_OK(::mongo::canonicalizeServerOptions(&environment));
-    ASSERT_OK(::mongo::storeServerOptions(environment, argv));
+    ASSERT_OK(::mongo::setupServerOptions(argv));
+    ASSERT_OK(::mongo::storeServerOptions(environment));
 
     int verbosity = 1;
     ASSERT_EQUALS(::mongo::logger::globalLogDomain()->getMinimumLogSeverity(),
@@ -139,7 +157,8 @@ TEST(Verbosity, CommandLineString) {
 
     ASSERT_OK(::mongo::validateServerOptions(environment));
     ASSERT_OK(::mongo::canonicalizeServerOptions(&environment));
-    ASSERT_OK(::mongo::storeServerOptions(environment, argv));
+    ASSERT_OK(::mongo::setupServerOptions(argv));
+    ASSERT_OK(::mongo::storeServerOptions(environment));
 
     int verbosity = 4;
     ASSERT_EQUALS(::mongo::logger::globalLogDomain()->getMinimumLogSeverity(),
@@ -167,7 +186,8 @@ TEST(Verbosity, CommandLineStringDisguisedLongForm) {
 
     ASSERT_OK(::mongo::validateServerOptions(environment));
     ASSERT_OK(::mongo::canonicalizeServerOptions(&environment));
-    ASSERT_OK(::mongo::storeServerOptions(environment, argv));
+    ASSERT_OK(::mongo::setupServerOptions(argv));
+    ASSERT_OK(::mongo::storeServerOptions(environment));
 
     int verbosity = 4;
     ASSERT_EQUALS(::mongo::logger::globalLogDomain()->getMinimumLogSeverity(),
@@ -277,7 +297,8 @@ TEST(Verbosity, INIConfigString) {
 
     ASSERT_OK(::mongo::validateServerOptions(environment));
     ASSERT_OK(::mongo::canonicalizeServerOptions(&environment));
-    ASSERT_OK(::mongo::storeServerOptions(environment, argv));
+    ASSERT_OK(::mongo::setupServerOptions(argv));
+    ASSERT_OK(::mongo::storeServerOptions(environment));
 
     int verbosity = 4;
     ASSERT_EQUALS(::mongo::logger::globalLogDomain()->getMinimumLogSeverity(),
@@ -331,7 +352,8 @@ TEST(Verbosity, INIConfigEmptyString) {
 
     ASSERT_OK(::mongo::validateServerOptions(environment));
     ASSERT_OK(::mongo::canonicalizeServerOptions(&environment));
-    ASSERT_OK(::mongo::storeServerOptions(environment, argv));
+    ASSERT_OK(::mongo::setupServerOptions(argv));
+    ASSERT_OK(::mongo::storeServerOptions(environment));
 
     int verbosity = 0;
     ASSERT_EQUALS(::mongo::logger::globalLogDomain()->getMinimumLogSeverity(),
@@ -361,7 +383,8 @@ TEST(Verbosity, JSONConfigString) {
 
     ASSERT_OK(::mongo::validateServerOptions(environment));
     ASSERT_OK(::mongo::canonicalizeServerOptions(&environment));
-    ASSERT_OK(::mongo::storeServerOptions(environment, argv));
+    ASSERT_OK(::mongo::setupServerOptions(argv));
+    ASSERT_OK(::mongo::storeServerOptions(environment));
 
     int verbosity = 4;
     ASSERT_EQUALS(::mongo::logger::globalLogDomain()->getMinimumLogSeverity(),
@@ -393,7 +416,8 @@ TEST(Verbosity, MultipleSourcesMultipleOptions) {
 
     ASSERT_OK(::mongo::validateServerOptions(environment));
     ASSERT_OK(::mongo::canonicalizeServerOptions(&environment));
-    ASSERT_OK(::mongo::storeServerOptions(environment, argv));
+    ASSERT_OK(::mongo::setupServerOptions(argv));
+    ASSERT_OK(::mongo::storeServerOptions(environment));
 
     int verbosity = 3;
     ASSERT_EQUALS(::mongo::logger::globalLogDomain()->getMinimumLogSeverity(),
@@ -435,7 +459,8 @@ TEST(Verbosity, YAMLConfigStringLogComponent) {
 
     ASSERT_OK(::mongo::validateServerOptions(environment));
     ASSERT_OK(::mongo::canonicalizeServerOptions(&environment));
-    ASSERT_OK(::mongo::storeServerOptions(environment, argv));
+    ASSERT_OK(::mongo::setupServerOptions(argv));
+    ASSERT_OK(::mongo::storeServerOptions(environment));
 
     // Verify component log levels using global log domain.
     int verbosity = 4;
@@ -475,5 +500,207 @@ TEST(Verbosity, YAMLConfigStringLogComponent) {
                       ::mongo::logger::LogComponent::kJournal),
                   ::mongo::logger::LogSeverity::Debug(2));
 }
+
+TEST(SetupOptions, Default) {
+    std::vector<std::string> argv;
+    argv.push_back("binaryname");
+
+    ASSERT_OK(::mongo::setupServerOptions(argv));
+
+    ASSERT_EQUALS(::mongo::serverGlobalParams.binaryName, "binaryname");
+    ASSERT_FALSE(::mongo::serverGlobalParams.cwd.empty());
+    ASSERT_EQUALS(::mongo::serverGlobalParams.argvArray.nFields(), static_cast<int>(argv.size()));
+}
+
+TEST(SetupOptions, RelativeBinaryPath) {
+    std::vector<std::string> argv;
+    argv.push_back("foo/bar/baz/binaryname");
+
+    ASSERT_OK(::mongo::setupServerOptions(argv));
+
+    ASSERT_EQUALS(::mongo::serverGlobalParams.binaryName, "binaryname");
+    ASSERT_FALSE(::mongo::serverGlobalParams.cwd.empty());
+    ASSERT_EQUALS(::mongo::serverGlobalParams.argvArray.nFields(), static_cast<int>(argv.size()));
+}
+
+TEST(SetupOptions, AbsoluteBinaryPath) {
+    std::vector<std::string> argv;
+    argv.push_back("/foo/bar/baz/binaryname");
+
+    ASSERT_OK(::mongo::setupServerOptions(argv));
+
+    ASSERT_EQUALS(::mongo::serverGlobalParams.binaryName, "binaryname");
+    ASSERT_FALSE(::mongo::serverGlobalParams.cwd.empty());
+    ASSERT_EQUALS(::mongo::serverGlobalParams.argvArray.nFields(), static_cast<int>(argv.size()));
+}
+
+TEST(SetupOptions, EmptyBinaryName) {
+    std::vector<std::string> argv;
+    argv.push_back("");
+
+    ASSERT_OK(::mongo::setupServerOptions(argv));
+
+    ASSERT_EQUALS(::mongo::serverGlobalParams.binaryName, "");
+    ASSERT_FALSE(::mongo::serverGlobalParams.cwd.empty());
+    ASSERT_EQUALS(::mongo::serverGlobalParams.argvArray.nFields(), static_cast<int>(argv.size()));
+}
+
+TEST(SetupOptions, MissingBinaryName) {
+    std::vector<std::string> argv;
+
+    ASSERT_NOT_OK(::mongo::setupServerOptions(argv));
+}
+
+#if !defined(_WIN32)
+
+#define ASSERT_BOOST_SUCCESS(ec) ASSERT_FALSE(ec) << ec.message()
+
+TEST(SetupOptions, DeepCwd) {
+    std::vector<std::string> argv;
+    argv.push_back("binaryname");
+
+    // Save the original cwd.
+    boost::system::error_code ec;
+    boost::filesystem::path cwd = boost::filesystem::current_path(ec);
+    ASSERT_BOOST_SUCCESS(ec);
+
+    // All work is done under a temporary base directory.
+    ::mongo::StringBuilder sb;
+    sb << "/tmp/deepcwd-" << getpid();
+    boost::filesystem::path deepBaseDir = sb.str();
+
+    auto cleanup = ::mongo::MakeGuard([&] {
+        boost::filesystem::current_path(cwd, ec);
+        boost::filesystem::remove_all(deepBaseDir, ec);
+    });
+
+    // Clear out any old base dir, and create an empty dir.
+    boost::filesystem::remove_all(deepBaseDir, ec);
+    ASSERT_BOOST_SUCCESS(ec);
+    boost::filesystem::create_directories(deepBaseDir, ec);
+    ASSERT_BOOST_SUCCESS(ec);
+
+    // Resolve the canonical base dir, in case /tmp is a symlink (eg. on OSX).
+    // This involves chdir into it, then getcwd() again (since getcwd() returns a canonical path).
+    boost::filesystem::current_path(deepBaseDir, ec);
+    ASSERT_BOOST_SUCCESS(ec);
+    deepBaseDir = boost::filesystem::current_path(ec);
+    ASSERT_BOOST_SUCCESS(ec);
+
+    boost::filesystem::path deepCwd = deepBaseDir;
+    boost::filesystem::path pathComponent = std::string(40, 'a');
+    while (deepCwd.size() < 3800) {
+        if (!boost::filesystem::create_directory(deepCwd / pathComponent, ec)) {
+            // Could not mkdir, so we are done and will stick with the previous level, thanks.
+            break;
+        }
+
+        boost::filesystem::current_path(deepCwd / pathComponent, ec);
+        if (ec) {
+            // Could not chdir, so we are done and will stick with the previous level, thanks.
+            break;
+        }
+
+        deepCwd /= pathComponent;
+    }
+
+    // Run the actual test.
+    Status res = ::mongo::setupServerOptions(argv);
+
+    ASSERT_OK(res);
+    ASSERT_FALSE(::mongo::serverGlobalParams.cwd.empty());
+    ASSERT_EQUALS(::mongo::serverGlobalParams.cwd, deepCwd.native())
+        << "serverGlobalParams.cwd is " << ::mongo::serverGlobalParams.cwd.size()
+        << " bytes long and deepCwd is " << deepCwd.size() << " bytes long.";
+    ASSERT_EQUALS(::mongo::serverGlobalParams.argvArray.nFields(), static_cast<int>(argv.size()));
+}
+
+TEST(SetupOptions, UnlinkedCwd) {
+    std::vector<std::string> argv;
+    argv.push_back("binaryname");
+
+    // Save the original cwd.
+    boost::system::error_code ec;
+    boost::filesystem::path cwd = boost::filesystem::current_path(ec);
+    ASSERT_BOOST_SUCCESS(ec);
+
+    std::string unlinkDir;
+
+    auto cleanup = ::mongo::MakeGuard([&] {
+        boost::filesystem::current_path(cwd, ec);
+        if (!unlinkDir.empty()) {
+            boost::filesystem::remove(cwd / unlinkDir, ec);
+        }
+    });
+
+    // mkdir our own unlink dir
+    unsigned int i = 0;
+    while (1) {
+        ::mongo::StringBuilder sb;
+        sb << "unlink" << i;
+        unlinkDir = sb.str();
+        if (boost::filesystem::create_directory(unlinkDir, ec)) {
+            // New directory was created, great.
+            break;
+        } else {
+            // Directory failed to create, or already existed (so try the next one).
+            ASSERT_BOOST_SUCCESS(ec);
+            i++;
+        }
+    }
+
+    // chdir into the unlink dir
+    boost::filesystem::current_path(unlinkDir, ec);
+    ASSERT_BOOST_SUCCESS(ec);
+
+    // Naive "rmdir ." doesn't work on Linux.
+    // Naive rmdir of cwd doesn't work on Solaris doesn't work (no matter how it's specified).
+    // So we use a subprocess to unlink the dir.
+    pid_t pid = fork();
+    ASSERT_NOT_EQUALS(pid, -1) << "unable to fork: " << ::mongo::errnoWithDescription();
+    if (pid == 0) {
+        // Subprocess
+        // No exceptions, ASSERT(), FAIL() or logging.
+        // Only signalling to the parent process via exit status.
+        // Only quickexit via _exit() (which prevents the cleanup guard from running, which is
+        // what we want).
+
+        // cd to root
+        boost::filesystem::current_path("/", ec);
+        if (ec) {
+            _exit(1);
+        }
+
+        // rmdir using absolute path
+        boost::filesystem::remove(cwd / unlinkDir, ec);
+        if (ec) {
+            _exit(2);
+        }
+
+        _exit(0);
+    }
+
+    // Wait for the subprocess to finish running the above code and exit, and check its result.
+    int status;
+    ASSERT_NOT_EQUALS(-1, waitpid(pid, &status, 0));
+    ASSERT(WIFEXITED(status));
+    int exitstatus = WEXITSTATUS(status);
+    if (exitstatus == 1) {
+        FAIL("subprocess was unable to cd to /");
+    } else if (exitstatus == 2) {
+        FAIL("subprocess was unable to remove unlink dir");
+    } else {
+        ASSERT_EQUALS(0, exitstatus);
+    }
+
+    // Run the actual test.
+    Status res = ::mongo::setupServerOptions(argv);
+
+    ASSERT_NOT_OK(res);
+    ASSERT_STRING_CONTAINS(res.toString(), "Cannot get current working directory");
+    ASSERT_STRING_CONTAINS(res.toString(), "No such file or directory");  // message for ENOENT
+}
+
+#endif  // !defined(_WIN32)
 
 }  // unnamed namespace
